--- a/TSP/templates/TSP/base.html
+++ b/TSP/templates/TSP/base.html
@@ -26,14 +26,14 @@
                 <div class="col-6 text-right">
 
                     {% if not user.is_authenticated %}
-                    <a href="{% provider_login_url 'google' %}" class="vcenter"><img
+                    <a href="{% provider_login_url 'google' %}?next={% url 'TSP:profile' %}" class="vcenter"><img
                             src="{% static 'TSP/img/gsignin.png' %}" class='gsignin-btn' alt="" srcset=""></a>
                     {% else %}
                     {% if person %}
                     <a href="{% url 'TSP:profile' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
                             class="fas fa-user-circle"></i>PROFILE</a>
                     {% endif %}
-                    <a href="{% url 'TSP:account_logout' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
+                    <a href="{% url 'TSP:account_logout' %}?next={% url 'TSP:home' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
                             class="fas fa-sign-out-alt"></i>SIGN OUT</a>
 
                     {% endif %}
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-lg-6 col-xs-12 about-company">
                     <h2>About Us</h2>
-                    <p style="font-size:15px;">The annual technical festival of IIT ropar “Adivtiya ”, marks a 3 day
+                    <p style="font-size:15px;">The annual technical festival of IIT ropar “Adivtiya”, marks a 3 day
                         journey consisting of various competitions spread across Robotics, Management, Coding,
                         Designing, Gaming, Astronomy, Aero-modelling and Quizzing. Apart from
                         the competitions, talks and workshops are few of the interesting events of the fest. The
@@ -72,8 +72,8 @@
                 <div class="col-lg-4 col-xs-12 location">
                     <h4 class="mt-lg-0 mt-sm-4">Location</h4>
                     <p> Birla Seeds Farms, Rupnagar, Punjab 140111</p>
-                    <p class="mb-0"><i class="fa fa-phone mr-3"></i>0188 124 2105</p>
-                    <p><i class="fa fa-envelope-o mr-3"></i>info@iitrpr.ac.in</p>
+                    <p class="mb-0"><i class="fa fa-phone mr-3"></i>08949852311</p>
+                    <p><i class="fa fa-envelope-o mr-3"></i>advitiya.pr@iitrpr.ac.in</p>
                 </div>
             </div>
             <div class="row mt-5">
