--- a/ca/templates/ca/base.html
+++ b/ca/templates/ca/base.html
@@ -26,14 +26,14 @@
                 <div class="col-6 text-right">
 
                     {% if not user.is_authenticated %}
-                    <a href="{% provider_login_url 'google' %}" class="vcenter"><img
+                    <a href="{% provider_login_url 'google' %}?next={% url 'ca:profile' %}" class="vcenter"><img
                             src="{% static 'ca/img/gsignin.png' %}" class='gsignin-btn' alt="" srcset=""></a>
                     {% else %}
                     {% if person %}
                     <a href="{% url 'ca:profile' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
                             class="fas fa-user-circle"></i>PROFILE</a>
                     {% endif %}
-                    <a href="{% url 'ca:account_logout' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
+                    <a href="{% url 'ca:account_logout' %}?next={% url 'ca:home' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
                             class="fas fa-sign-out-alt"></i>SIGN OUT</a>
 
                     {% endif %}
