added the events individual page but not edited it and forms also have to be added

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -40,7 +40,7 @@
                         <!-- Nav Start -->
                         <div class="classynav">
                             <ul id="nav">
-                                <li class="active"><a href="{% url 'main_page:index' %}">Home</a></li>
+                                <li><a href="{% url 'main_page:index' %}">Home</a></li>
                                 <li><a href="#">Pages</a>
                                 </li>
                                 <li><a href="#">Team</a></li>
