--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -42,7 +42,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -64,7 +64,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -86,7 +86,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -108,7 +108,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -130,7 +130,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -152,7 +152,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -174,7 +174,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -196,7 +196,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -212,18 +212,17 @@
                       <a class="blog-title" href="#">Los Angeles Institute</a>
                       <!-- Post Meta -->
                       <div class="post-meta">
-                          <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i>January 14, 2019</a>
+                          <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i>January 11, 2019</a>
                           <a class="post-author" href="#"><i class="zmdi zmdi-account"></i>Laura Green</a>
                       </div>
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="#"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 2 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
       </div>
-
   </div>
 </div>
     {%endblock%}
