--- a/TSP/templates/TSP/register.html
+++ b/TSP/templates/TSP/register.html
@@ -14,6 +14,9 @@
                         label {
                             color: white;
                         }
+                        .invalid-feedback{
+                            color: red !important;
+                        }
                     </Style>
                     <form method="POST" action="">
                         {% csrf_token %}
