--- a/ca/templates/ca/register.html
+++ b/ca/templates/ca/register.html
@@ -14,6 +14,10 @@
                         label {
                             color: white;
                         }
+
+                        .invalid-feedback {
+                            color: red !important;
+                        }
                     </Style>
                     <form method="POST" action="">
                         {% csrf_token %}
