--- a/TSP/templates/TSP/base.html
+++ b/TSP/templates/TSP/base.html
@@ -26,15 +26,16 @@
                 <div class="col-6 text-right">
 
                     {% if not user.is_authenticated %}
-                    <a href="{% provider_login_url 'google' %}?next={% url 'TSP:profile' %}" class="vcenter"><img
-                            src="{% static 'TSP/img/gsignin.png' %}" class='gsignin-btn' alt="" srcset=""></a>
+                    <a href="{% provider_login_url 'google' %}?next={% url 'TSP:profile' %}" class="btn btn-secondary"
+                        style="margin-bottom: 3px;">
+                        <i class="fab fa-google"></i> Register</a>
                     {% else %}
                     {% if person %}
                     <a href="{% url 'TSP:profile' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
                             class="fas fa-user-circle"></i>PROFILE</a>
                     {% endif %}
-                    <a href="{% url 'TSP:account_logout' %}?next={% url 'TSP:home' %}" class="btn btn-secondary" style="margin-bottom: 3px;"><i
-                            class="fas fa-sign-out-alt"></i>SIGN OUT</a>
+                    <a href="{% url 'TSP:account_logout' %}?next={% url 'TSP:home' %}" class="btn btn-secondary"
+                        style="margin-bottom: 3px;"><i class="fas fa-sign-out-alt"></i>SIGN OUT</a>
 
                     {% endif %}
 
