--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -11,6 +11,9 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.2/animate.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/owl-carousel/1.3.3/owl.carousel.min.css">
+
+<link rel="stylesheet" href="https://unpkg.com/flickity@2.0/dist/flickity.min.css">
+<script src="https://unpkg.com/flickity@2.0/dist/flickity.pkgd.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/material-design-iconic-font/2.2.0/css/material-design-iconic-font.min.css">
     <link href="{% static 'main_page/css/style.css' %}" rel="stylesheet">
     <title>{% block title %} Advitiya{%endblock%} </title>
@@ -44,7 +47,22 @@
                                 <li><a href="#">Pages</a>
                                 </li>
                                 <li><a href="#">Team</a></li>
-                                <li><a href="{% url 'main_page:events'%}">Events</a></li>
+                                <li><a href="{% url 'main_page:events'%}">Events</a>
+                                    <ul class="dropdown">
+                                            <li><a href="{% url 'main_page:events'%}">-Aeromodelling</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- Automotive Club</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- CIM</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- Coding Club</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- Monochrome</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- Robotics</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- FNE</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- Zenith</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">-Soft-Com </a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- MUN</a>
+                                            </li>
+                                        </ul>
+                                </li>
+                                
                                 <li><a href="{% url 'ca:home' %}">Campus Ambassador</a></li>
                             </ul>
       
