added the fields in the individual events page

--- a/main_page/templates/main_page/base.html
+++ b/main_page/templates/main_page/base.html
@@ -50,7 +50,7 @@
                                 <li><a href="{% url 'main_page:events'%}">Events</a>
                                     <ul class="dropdown">
                                             <li><a href="{% url 'main_page:events'%}">-Aeromodelling</a></li>
-                                            <li><a href="{% url 'main_page:events'%}">- Automotive Club</a></li>
+                                            <li><a href="{% url 'main_page:events'%}">- Automotive</a></li>
                                             <li><a href="{% url 'main_page:events'%}">- CIM</a></li>
                                             <li><a href="{% url 'main_page:events'%}">- Coding Club</a></li>
                                             <li><a href="{% url 'main_page:events'%}">- Monochrome</a></li>
