--- a/main_page/templates/main_page/events.html
+++ b/main_page/templates/main_page/events.html
@@ -81,7 +81,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 1  %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -94,7 +94,7 @@
                       <img src="{% static 'main_page/img/bg-img/4.jpg' %}" alt="">
                   </div>
                   <div class="single-blog-text text-center">
-                      <a class="blog-title" href="#">Hovercraft</a>
+                      <a class="blog-title" href="#">Hover Rumble</a>
                       <!-- Post Meta -->
                       <div class="post-meta">
                           <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i>January 14, 2019</a>
@@ -103,7 +103,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 2 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -116,7 +116,7 @@
                       <img src="{% static 'main_page/img/bg-img/4.jpg' %}" alt="">
                   </div>
                   <div class="single-blog-text text-center">
-                      <a class="blog-title" href="#">Project RAHAT</a>
+                      <a class="blog-title" href="#">Virtual Flying</a>
                       <!-- Post Meta -->
                       <div class="post-meta">
                           <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i>January 14, 2019</a>
@@ -125,7 +125,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 3 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -138,7 +138,7 @@
                       <img src="{% static 'main_page/img/bg-img/4.jpg' %}" alt="">
                   </div>
                   <div class="single-blog-text text-center">
-                      <a class="blog-title" href="#">Drone Racing</a>
+                      <a class="blog-title" href="#">Project Sushen</a>
                       <!-- Post Meta -->
                       <div class="post-meta">
                           <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i> January 14, 2019</a>
@@ -147,7 +147,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 4 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -160,7 +160,7 @@
                       <img src="{% static 'main_page/img/bg-img/4.jpg' %}" alt="">
                   </div>
                   <div class="single-blog-text text-center">
-                      <a class="blog-title" href="#">RC plane</a>
+                      <a class="blog-title" href="#">Sky Hawk</a>
                       <!-- Post Meta -->
                       <div class="post-meta">
                           <a class="post-date" href="#"><i class="zmdi zmdi-alarm-check"></i>January 14, 2019</a>
@@ -169,7 +169,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 5 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
@@ -191,7 +191,7 @@
                       <p>Street Food Convention will showcase products like Packed food, beef and lamb, street food.</p>
                   </div>
                   <div class="blog-btn">
-                      <a href="{% url 'main_page:event_page' 1 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
+                      <a href="{% url 'main_page:event_page' 6 %}"><i class="zmdi zmdi-long-arrow-right"></i></a>
                   </div>
               </div>
           </div>
